--- a/src/index.html
+++ b/src/index.html
@@ -176,5 +176,6 @@
     </footer>
 
     <script type="module" src="/main.js"></script>
+    <script type="module" src="/index.js"></script>
   </body>
 </html>
