--- a/src/index.html
+++ b/src/index.html
@@ -35,13 +35,28 @@
       </p>
       <ul class="menu">
         <li class="menu-item">
-          <a href="index.html" style="color: inherit">Portfolio</a>
+          <a
+            class="anchor-padding-top-bottom"
+            href="index.html"
+            style="color: inherit"
+            >Portfolio</a
+          >
         </li>
         <li class="menu-item">
-          <a href="index.html" style="color: inherit">About Us</a>
+          <a
+            class="anchor-padding-top-bottom"
+            href="index.html"
+            style="color: inherit"
+            >About Us</a
+          >
         </li>
         <li class="menu-item">
-          <a href="index.html" style="color: inherit">Contact</a>
+          <a
+            class="anchor-padding-top-bottom"
+            href="index.html"
+            style="color: inherit"
+            >Contact</a
+          >
         </li>
       </ul>
       <div class="dark-overlay"></div>
@@ -155,13 +170,28 @@
       <div class="footer-main-container">
         <ul>
           <li>
-            <a href="index.html" style="color: inherit">Portfolio</a>
+            <a
+              class="anchor-padding-top-bottom"
+              href="index.html"
+              style="color: inherit"
+              >Portfolio</a
+            >
           </li>
           <li>
-            <a href="index.html" style="color: inherit">About Us</a>
+            <a
+              class="anchor-padding-top-bottom"
+              href="index.html"
+              style="color: inherit"
+              >About Us</a
+            >
           </li>
           <li>
-            <a href="index.html" style="color: inherit">Contact</a>
+            <a
+              class="anchor-padding-top-bottom"
+              href="index.html"
+              style="color: inherit"
+              >Contact</a
+            >
           </li>
         </ul>
         <div class="footer-button-container">
