Moved nav and footer markup in separate module

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Spartan:wght@100;500;800&display=swap"
       rel="stylesheet"
     />
+    <!-- TODO: replace font-awesome CDN icons with assets -->
     <script
       src="https://kit.fontawesome.com/349cf0313a.js"
       crossorigin="anonymous"
@@ -30,39 +31,7 @@
     </section>
 
     <nav class="container nav">
-      <p class="nav-title pointer">
-        <a href="index.html" style="color: inherit">Arch</a>
-      </p>
-      <ul class="menu">
-        <li class="menu-item">
-          <a
-            class="anchor-padding-top-bottom"
-            href="index.html"
-            style="color: inherit"
-            >Portfolio</a
-          >
-        </li>
-        <li class="menu-item">
-          <a
-            class="anchor-padding-top-bottom"
-            href="index.html"
-            style="color: inherit"
-            >About Us</a
-          >
-        </li>
-        <li class="menu-item">
-          <a
-            class="anchor-padding-top-bottom"
-            href="index.html"
-            style="color: inherit"
-            >Contact</a
-          >
-        </li>
-      </ul>
-      <div class="dark-overlay"></div>
-      <div class="hamburger">
-        <i class="fas fa-bars"></i>
-      </div>
+      <!-- NAVBAR CONTENT ADDED WITH MAIN.JS -->
     </nav>
 
     <div class="container-no-padding-sm">
@@ -164,45 +133,7 @@
     </section>
 
     <footer class="footer container-no-padding">
-      <div class="footer-logo">
-        <p>arch</p>
-      </div>
-      <div class="footer-main-container">
-        <ul>
-          <li>
-            <a
-              class="anchor-padding-top-bottom"
-              href="index.html"
-              style="color: inherit"
-              >Portfolio</a
-            >
-          </li>
-          <li>
-            <a
-              class="anchor-padding-top-bottom"
-              href="index.html"
-              style="color: inherit"
-              >About Us</a
-            >
-          </li>
-          <li>
-            <a
-              class="anchor-padding-top-bottom"
-              href="index.html"
-              style="color: inherit"
-              >Contact</a
-            >
-          </li>
-        </ul>
-        <div class="footer-button-container">
-          <a href="index.html">
-            <button class="button">
-              <p>See Our Portfolio</p>
-              <i class="fas fa-arrow-right"></i>
-            </button>
-          </a>
-        </div>
-      </div>
+      <!-- FOOTER INJECTED VIA MAIN.JS -->
     </footer>
 
     <script type="module" src="/main.js"></script>
