--- a/template.html
+++ b/template.html
@@ -27,20 +27,20 @@
     <section class="breadcrumb">
       <div class="breadcrumb-line"></div>
       <!-- TO EDIT: PAGE BREADCRUMB NAME -->
-      <p class="breadcrumb-text"> ABOUT US </p>
+      <p class="breadcrumb-text"> HOME </p>
     </section>
 
     <nav class="container nav">
       <!-- NAVBAR CONTENT ADDED WITH MAIN.JS -->
     </nav>
 
-    <h1>ABOUT US </h1>
+    <!-- TO ADD: PAGE CONTENT HERE -->
 
     <footer class="footer container-no-padding">
       <!-- FOOTER INJECTED VIA MAIN.JS -->
     </footer>
 
-    <script type="module" src="../main.js"></script>
-    <script type="module" src="./about-us.js"></script>
+    <script type="module" src="/main.js"></script>
+    <!-- TO ADD: page relevant script -->
   </body>
 </html>
