--- a/src/pages/about-us.html
+++ b/src/pages/about-us.html
@@ -34,7 +34,26 @@
       <!-- NAVBAR CONTENT ADDED WITH MAIN.JS -->
     </nav>
 
-    <h1>ABOUT US </h1>
+    <section class="portfolio container">
+      <div class="portfolio-card portfolio-card-1">
+        <div class="linear-overlay"></div>
+        <div class="portfolio-card-text">
+          <h3 class="h3"> Project Del Sol </h3>
+          <p class="pointer">
+            <a href="index.html" style="color: inherit">View All Projects </a>
+          </p>
+        </div>
+      </div>
+      <div class="portfolio-card portfolio-card-2">
+        <div class="linear-overlay"></div>
+        <div class="portfolio-card-text">
+          <h3 class="h3"> Project Del Sol </h3>
+          <p class="pointer">
+            <a href="index.html" style="color: inherit">View All Projects </a>
+          </p>
+        </div>
+      </div>
+    </section>
 
     <footer class="footer container-no-padding">
       <!-- FOOTER INJECTED VIA MAIN.JS -->
