--- a/src/pages/about-us.html
+++ b/src/pages/about-us.html
@@ -35,7 +35,7 @@
     </nav>
 
     <section class="portfolio container">
-      <div class="portfolio-card portfolio-card-1">
+      <!-- <div class="portfolio-card portfolio-card-1">
         <div class="linear-overlay"></div>
         <div class="portfolio-card-text">
           <h3 class="h3"> Project Del Sol </h3>
@@ -44,15 +44,7 @@
           </p>
         </div>
       </div>
-      <div class="portfolio-card portfolio-card-2">
-        <div class="linear-overlay"></div>
-        <div class="portfolio-card-text">
-          <h3 class="h3"> Project Del Sol </h3>
-          <p class="pointer">
-            <a href="index.html" style="color: inherit">View All Projects </a>
-          </p>
-        </div>
-      </div>
+      -->
     </section>
 
     <footer class="footer container-no-padding">
