--- a/src/index.html
+++ b/src/index.html
@@ -1,125 +1,95 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<section class="breadcrumb">
+  <div class="breadcrumb-line"></div>
+  <p class="breadcrumb-text"> HOME </p>
+</section>
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./assets/favicon-32x32.png"
-    />
+<nav class="container nav">
+  <!-- NAVBAR CONTENT ADDED WITH MAIN.JS -->
+</nav>
 
-    <title>Arch Studio</title>
-
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Spartan:wght@100;500;800&display=swap"
-      rel="stylesheet"
-    />
-    <!-- TODO: replace font-awesome CDN icons with assets -->
-    <script
-      src="https://kit.fontawesome.com/349cf0313a.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <section class="breadcrumb">
-      <div class="breadcrumb-line"></div>
-      <p class="breadcrumb-text"> HOME </p>
-    </section>
-
-    <nav class="container nav">
-      <!-- NAVBAR CONTENT ADDED WITH MAIN.JS -->
-    </nav>
-
-    <div class="container-no-padding-sm">
-      <section class="primary-hero">
-        <div class="hero-dark-overlay"></div>
-        <div class="hero-content">
-          <h1 class="h1-bold white-text"> Project Paramour</h1>
-          <p class="hero-description">
-            Project made for an art museum near Southwest London. Project
-            Paramour is a statement of bold, modern architecture.
-          </p>
-          <a href="index.html">
-            <button class="button">
-              <p>See Our Portfolio</p>
-              <i class="fas fa-arrow-right"></i>
-            </button>
-          </a>
-        </div>
-        <div class="hero-pagination">
-          <!-- TODO: animate gallery -->
-          <button
-            class="square-button square-button-very-dark-blue"
-            data-index="01"
-            >01</button
-          >
-          <button class="square-button" data-index="02">02</button>
-          <button class="square-button" data-index="03">03</button>
-          <button class="square-button" data-index="04">04</button>
-        </div>
-      </section>
+<div class="container-no-padding-sm">
+  <section class="primary-hero">
+    <div class="hero-dark-overlay"></div>
+    <div class="hero-content">
+      <h1 class="h1-bold white-text"> Project Paramour</h1>
+      <p class="hero-description">
+        Project made for an art museum near Southwest London. Project Paramour
+        is a statement of bold, modern architecture.
+      </p>
+      <a href="index.html">
+        <button class="button">
+          <p>See Our Portfolio</p>
+          <i class="fas fa-arrow-right"></i>
+        </button>
+      </a>
     </div>
-
-    <section class="container welcome">
-      <h1 class="h1-large welcome-large-text"> Welcome </h1>
-      <div class="welcome-content">
-        <div class="welcome-content-left">
-          <h2> Welcome to Arch Studio </h2>
-          <p>
-            We have a unique network and skillset to help bring your projects to
-            life. Our small team of highly skilled individuals combined with our
-            large network put us in a strong position to deliver exceptional
-            results.
-          </p>
-          <p>
-            Over the past 10 years, we have worked on all kinds of projects.
-            From stations to high-rise buildings, we create spaces that inspire
-            and delight.
-          </p>
-          <p>
-            We work closely with our clients so that we understand the
-            intricacies of each project. This allows us to work in harmony the
-            surrounding area to create truly stunning projects that will stand
-            the test of time.
-          </p>
-        </div>
-        <div class="welcome-content-right"></div>
-      </div>
-    </section>
-
-    <div class="container-no-padding-sm">
-      <section class="secondary-hero">
-        <div class="hero-dark-overlay"></div>
-        <div class="hero-content">
-          <h1 class="h1-bold white-text"> Small team, big ideas </h1>
-
-          <a href="/pages/about-us.html">
-            <button class="button">
-              <p>About Us</p>
-              <i class="fas fa-arrow-right"></i>
-            </button>
-          </a>
-        </div>
-      </section>
+    <div class="hero-pagination">
+      <!-- TODO: animate gallery -->
+      <button class="square-button square-button-very-dark-blue" data-index="01"
+        >01</button
+      >
+      <button class="square-button" data-index="02">02</button>
+      <button class="square-button" data-index="03">03</button>
+      <button class="square-button" data-index="04">04</button>
     </div>
+  </section>
+</div>
 
-    <section class="container featured">
-      <div class="featured-header">
-        <h2 class="h2"> Featured </h2>
-        <a href="/pages/about-us.html">
-          <button class="button">
-            <p>See All</p>
-            <i class="fas fa-arrow-right"></i>
-          </button>
-        </a>
-      </div>
+<section class="container welcome">
+  <h1 class="h1-large welcome-large-text"> Welcome </h1>
+  <div class="welcome-content">
+    <div class="welcome-content-left">
+      <h2> Welcome to Arch Studio </h2>
+      <p>
+        We have a unique network and skillset to help bring your projects to
+        life. Our small team of highly skilled individuals combined with our
+        large network put us in a strong position to deliver exceptional
+        results.
+      </p>
+      <p>
+        Over the past 10 years, we have worked on all kinds of projects. From
+        stations to high-rise buildings, we create spaces that inspire and
+        delight.
+      </p>
+      <p>
+        We work closely with our clients so that we understand the intricacies
+        of each project. This allows us to work in harmony the surrounding area
+        to create truly stunning projects that will stand the test of time.
+      </p>
+    </div>
+    <div class="welcome-content-right"></div>
+  </div>
+</section>
 
-      <div class="featured-cards-container">
-        <!-- <div class="featured-card featured-1">
+<div class="container-no-padding-sm">
+  <section class="secondary-hero">
+    <div class="hero-dark-overlay"></div>
+    <div class="hero-content">
+      <h1 class="h1-bold white-text"> Small team, big ideas </h1>
+
+      <a href="/pages/about-us.html">
+        <button class="button">
+          <p>About Us</p>
+          <i class="fas fa-arrow-right"></i>
+        </button>
+      </a>
+    </div>
+  </section>
+</div>
+
+<section class="container featured">
+  <div class="featured-header">
+    <h2 class="h2"> Featured </h2>
+    <a href="/pages/about-us.html">
+      <button class="button">
+        <p>See All</p>
+        <i class="fas fa-arrow-right"></i>
+      </button>
+    </a>
+  </div>
+
+  <div class="featured-cards-container">
+    <!-- <div class="featured-card featured-1">
           <h1 class="h1-large"> 1 </h1>
           <div class="linear-overlay"></div>
           <div class="featured-card-text">
@@ -129,14 +99,12 @@
             </p>
           </div>
         </div> -->
-      </div>
-    </section>
+  </div>
+</section>
 
-    <footer class="footer container-no-padding">
-      <!-- FOOTER INJECTED VIA MAIN.JS -->
-    </footer>
+<footer class="footer container-no-padding">
+  <!-- FOOTER INJECTED VIA MAIN.JS -->
+</footer>
 
-    <script type="module" src="/main.js"></script>
-    <script type="module" src="/index.js"></script>
-  </body>
-</html>
+<script type="module" src="/main.js"></script>
+<script type="module" src="/index.js"></script>
