--- a/template.html
+++ b/template.html
@@ -1,18 +1,9 @@
 <section class="breadcrumb">
   <div class="breadcrumb-line"></div>
-  <!-- TO EDIT: PAGE BREADCRUMB NAME -->
-  <p class="breadcrumb-text"> HOME </p>
+  <p class="breadcrumb-text"> <!-- PAGE TITLE --> </p>
 </section>
 
-<nav class="container nav">
-  <!-- NAVBAR CONTENT ADDED WITH MAIN.JS -->
-</nav>
+<!-- PAGE CONTENT GOES HERE -->
 
-<!-- TO ADD: PAGE CONTENT HERE -->
-
-<footer class="footer container-no-padding">
-  <!-- FOOTER INJECTED VIA MAIN.JS -->
-</footer>
-
-<script type="module" src="/main.js"></script>
-<!-- TO ADD: page relevant script -->
+<script type="module" src="../main.js"></script>
+<!-- PAGE SPECIFIC JS MODULES -->
