--- a/src/portfolio/index.html
+++ b/src/portfolio/index.html
@@ -1,6 +1,6 @@
 <section class="breadcrumb">
   <div class="breadcrumb-line"></div>
-  <p class="breadcrumb-text"> ABOUT US </p>
+  <p class="breadcrumb-text"> Portfolio </p>
 </section>
 
 <section class="portfolio container">
@@ -17,4 +17,4 @@
 </section>
 
 <script type="module" src="../main.js"></script>
-<script type="module" src="./about-us.js"></script>
+<script type="module" src="./portfolio.js"></script>
