Add primary hero to /contact

--- a/src/pages/contact/index.html
+++ b/src/pages/contact/index.html
@@ -3,7 +3,33 @@
   <p class="breadcrumb-text"> CONTACT </p>
 </section>
 
-<p>contact</p>
+<section class="contact-intro">
+  <div class="hero-dark-overlay" style="z-index: 5"></div>
+  <picture>
+    <img
+      src="../../assets/contact/mobile/image-hero.jpg"
+      srcset="
+        ../../assets/contact/desktop/image-hero.jpg,
+        ../../assets/contact/tablet/image-hero.jpg
+      "
+      sizes="(min-width: 1440px), (min-width: 768px)"
+      alt="About us"
+      style="object-fit: cover"
+    />
+  </picture>
+  <h1 style="display: none"> Contact </h1>
+  <div class="container contact-intro-content">
+    <h2 class="h2">
+      Tell us about <br />
+      your project
+    </h2>
+    <p
+      >We’d love to hear more about your project. Please, leave a message below
+      or give us a call. We have two offices, one in Texas and one in Tennessee.
+      If you find yourself nearby, come say hello!
+    </p>
+  </div>
+</section>
 
 <script type="module" src="../../main.js"></script>
 <script type="module" src="./contact.js"></script>
