Add info cards to /contact

--- a/src/pages/contact/index.html
+++ b/src/pages/contact/index.html
@@ -30,5 +30,37 @@
   </div>
 </section>
 
+<section class="contact-details container">
+  <h2 class="h2">Contact Details </h2>
+  <div class="contact-details-card">
+    <div class="contact-details-card-info">
+      <p>Main Office</p>
+      <p>Mail : archone@mail.com</p>
+      <p>Address : 1892 Chenoweth Drive TN</p>
+      <p>Phone : 123-456-3451</p>
+    </div>
+    <a href="">
+      <button class="button-no-bg">
+        <p>View on Map</p>
+        <i class="fas fa-arrow-right"></i>
+      </button>
+    </a>
+  </div>
+  <div class="contact-details-card">
+    <div class="contact-details-card-info">
+      <p>Office II</p>
+      <p>Mail : archtwo@mail.com</p>
+      <p>Address : 3399 Wines Lane TX</p>
+      <p>Phone : 823-123-4321</p>
+    </div>
+    <a href="">
+      <button class="button-no-bg">
+        <p>View on Map</p>
+        <i class="fas fa-arrow-right"></i>
+      </button>
+    </a>
+  </div>
+</section>
+
 <script type="module" src="../../main.js"></script>
 <script type="module" src="./contact.js"></script>
