Add map in /contact

--- a/src/pages/contact/index.html
+++ b/src/pages/contact/index.html
@@ -4,7 +4,7 @@
 </section>
 
 <section class="contact-intro container-no-padding-sm">
-  <picture style="position: relative">
+  <picture class="picture-full-width-centered" style="position: relative">
     <source
       media="(min-width:1440px)"
       srcset="../../assets/contact/desktop/image-hero.jpg"
@@ -60,6 +60,24 @@
       </button>
     </a>
   </div>
+</section>
+
+<section class="contact-map container-no-padding-sm">
+  <picture class="picture-full-width-centered">
+    <source
+      media="(min-width:1440px)"
+      srcset="../../assets/contact/desktop/image-map.png"
+    />
+    <source
+      media="(min-width:650px)"
+      srcset="../../assets/contact/tablet/image-map.png"
+    />
+    <img
+      style="object-fit: cover"
+      src="../../assets/contact/mobile/image-map.png"
+      alt="Our location"
+    />
+  </picture>
 </section>
 
 <script type="module" src="../../main.js"></script>
