Add contact form

--- a/src/pages/contact/index.html
+++ b/src/pages/contact/index.html
@@ -80,5 +80,23 @@
   </picture>
 </section>
 
+<section class="contact-form container">
+  <h2 class="h2">Connect with us </h2>
+  <form action="">
+    <label for="name">
+      <input type="text" name="name" id="name" placeholder="Name" />
+    </label>
+    <label for="email">
+      <input type="text" name="email" id="email" placeholder="Email" />
+    </label>
+    <label for="message">
+      <input type="text" name="message" id="message" placeholder="Message" />
+    </label>
+    <button class="square-button-very-dark-blue"
+      ><i class="fas fa-arrow-right"></i
+    ></button>
+  </form>
+</section>
+
 <script type="module" src="../../main.js"></script>
 <script type="module" src="./contact.js"></script>
