Remove unused js file

--- a/src/pages/contact/index.html
+++ b/src/pages/contact/index.html
@@ -99,4 +99,6 @@
 </section>
 
 <script type="module" src="../../main.js"></script>
-<script type="module" src="./contact.js"></script>
+<script type="module">
+  import "./contact.scss";
+</script>
