Fix broken links on /homepage

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         Project made for an art museum near Southwest London. Project Paramour
         is a statement of bold, modern architecture.
       </p>
-      <a href="index.html">
+      <a href="/pages/portfolio/">
         <button class="button">
           <p>See Our Portfolio</p>
           <i class="fas fa-arrow-right"></i>
@@ -63,7 +63,7 @@
     <div class="hero-content">
       <h1 class="h1-bold white-text"> Small team, big ideas </h1>
 
-      <a href="/pages/about-us.html">
+      <a href="/pages/about-us.html" style="display: none">
         <button class="button">
           <p>About Us</p>
           <i class="fas fa-arrow-right"></i>
@@ -76,7 +76,7 @@
 <section class="container featured">
   <div class="featured-header">
     <h2 class="h2"> Featured </h2>
-    <a href="/pages/about-us.html">
+    <a href="/pages/portfolio/">
       <button class="button">
         <p>See All</p>
         <i class="fas fa-arrow-right"></i>
