--- a/src/index.html
+++ b/src/index.html
@@ -3,33 +3,56 @@
   <p class="breadcrumb-text"> HOME </p>
 </section>
 
-<div class="container-no-padding-sm">
-  <section class="primary-hero">
-    <div class="hero-dark-overlay"></div>
-    <div class="hero-content">
-      <h1 class="h1-bold white-text"> Project Paramour</h1>
-      <p class="hero-description">
-        Project made for an art museum near Southwest London. Project Paramour
-        is a statement of bold, modern architecture.
-      </p>
-      <a href="/pages/portfolio/">
-        <button class="button">
-          <p>See Our Portfolio</p>
-          <i class="fas fa-arrow-right"></i>
-        </button>
-      </a>
+<section class="primary-hero container-no-padding-sm">
+  <div class="glide">
+    <div class="glide__track" data-glide-el="track">
+      <ul class="glide__slides">
+        <!-- <li class="glide__slide">
+          <picture
+            class="picture-full-width-centered"
+            style="position: relative"
+          >
+            <source
+              media="(min-width:1440px)"
+              srcset="./assets/home/desktop/image-hero-paramour.jpg"
+            />
+            <source
+              media="(min-width:768px)"
+              srcset="./assets/home/tablet/image-hero-paramour.jpg"
+            />
+            <img
+              src="./assets/home/mobile/image-hero-paramour.jpg"
+              alt="Paramour architecture design"
+            />
+            <div class="hero-dark-overlay" style="z-index: 5"></div>
+          </picture>
+
+          <div class="hero-content">
+            <h1 class="h1-bold white-text"> Project Paramour</h1>
+            <p class="hero-description">
+              Project made for an art museum near Southwest London. Project
+              Paramour is a statement of bold, modern architecture.
+            </p>
+            <a href="/pages/portfolio/">
+              <button class="button">
+                <p>See Our Portfolio</p>
+                <i class="fas fa-arrow-right"></i>
+              </button>
+            </a>
+          </div>
+        </li> -->
+      </ul>
     </div>
-    <div class="hero-pagination">
-      <!-- TODO: animate gallery -->
-      <button class="square-button square-button-very-dark-blue" data-index="01"
-        >01</button
-      >
-      <button class="square-button" data-index="02">02</button>
-      <button class="square-button" data-index="03">03</button>
-      <button class="square-button" data-index="04">04</button>
-    </div>
-  </section>
-</div>
+  </div>
+  <div class="hero-pagination">
+    <button class="square-button square-button-very-dark-blue" data-index="01">
+      01
+    </button>
+    <button class="square-button" data-index="02">02</button>
+    <button class="square-button" data-index="03">03</button>
+    <button class="square-button" data-index="04">04</button>
+  </div>
+</section>
 
 <section class="container welcome">
   <h1 class="h1-large welcome-large-text"> Welcome </h1>
