Add carousel to hero

--- a/src/index.html
+++ b/src/index.html
@@ -7,51 +7,34 @@
   <div class="glide">
     <div class="glide__track" data-glide-el="track">
       <ul class="glide__slides">
-        <!-- <li class="glide__slide">
-          <picture
-            class="picture-full-width-centered"
-            style="position: relative"
-          >
-            <source
-              media="(min-width:1440px)"
-              srcset="./assets/home/desktop/image-hero-paramour.jpg"
-            />
-            <source
-              media="(min-width:768px)"
-              srcset="./assets/home/tablet/image-hero-paramour.jpg"
-            />
-            <img
-              src="./assets/home/mobile/image-hero-paramour.jpg"
-              alt="Paramour architecture design"
-            />
-            <div class="hero-dark-overlay" style="z-index: 5"></div>
-          </picture>
-
-          <div class="hero-content">
-            <h1 class="h1-bold white-text"> Project Paramour</h1>
-            <p class="hero-description">
-              Project made for an art museum near Southwest London. Project
-              Paramour is a statement of bold, modern architecture.
-            </p>
-            <a href="/pages/portfolio/">
-              <button class="button">
-                <p>See Our Portfolio</p>
-                <i class="fas fa-arrow-right"></i>
-              </button>
-            </a>
-          </div>
-        </li> -->
+        <!-- PRIMARY HEROES INSERTED HERE -->
       </ul>
     </div>
+
+    <div class="glide__bullets hero-pagination" data-glide-el="controls[nav]">
+      <button class="glide__bullet square-button" data-glide-dir="=0">
+        01
+      </button>
+      <button class="glide__bullet square-button" data-glide-dir="=1">
+        02
+      </button>
+      <button class="glide__bullet square-button" data-glide-dir="=2">
+        03
+      </button>
+      <button class="glide__bullet square-button" data-glide-dir="=3">
+        04
+      </button>
+    </div>
   </div>
-  <div class="hero-pagination">
-    <button class="square-button square-button-very-dark-blue" data-index="01">
+
+  <!-- <div class="hero-pagination">
+    <button class="square-button" data-index="01">
       01
     </button>
     <button class="square-button" data-index="02">02</button>
     <button class="square-button" data-index="03">03</button>
     <button class="square-button" data-index="04">04</button>
-  </div>
+  </div> -->
 </section>
 
 <section class="container welcome">
